feat: notifications, OAuth, admin messaging, and booking/ticket fixes